--- a/frontend_App/frontend/package.json
+++ b/frontend_App/frontend/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp -v build/static/js/main.*.js ../static/js/main.js && cp -v build/static/css/main.*.css ../static/css/main.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
