--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,11 @@ django = "*"
 django-ninja = "*"
 pillow = "*"
 django-cors-headers = "*"
+django-allauth = "*"
 
 [dev-packages]
 autopep8 = "*"
+djlint = "*"
 
 [requires]
 python_version = "3.10"
