--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,11 @@ name = "pypi"
 
 [packages]
 django = "*"
-django-ninja = "*"
 pillow = "*"
 django-cors-headers = "*"
 django-allauth = "*"
+djangorestframework = "*"
+dj-rest-auth = "*"
 
 [dev-packages]
 autopep8 = "*"
