--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,6 @@ setuptools==65.6.3; python_version >= '3.7'
 sqlparse==0.4.3; python_version >= '3.5'
 urllib3==1.26.13; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 whitenoise==6.2.0
+django-extensions = "*"
+pyparsing = "*"
+pydot = "*"
